--- a/source/scss/components/card.scss
+++ b/source/scss/components/card.scss
@@ -1,27 +1,73 @@
 .card {
-  width: 200px;
+  width: 319px;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .card__top {
-  width: 178px;
+  width: 273px;
+  height: 40px;
   margin-left: auto;
-  border: 4px solid black;
+  border: 4px solid #1698d9;
+  background:white;
   border-bottom: none;
   border-left: none;
   position: relative;
   border-top-right-radius: 10px;
+  z-index: 2;
 }
 
-.card__top::before {
-  content: '';
+.card__desc {
+  margin: 0;
+  padding-top: 15px;
+}
+
+.card__triangle {
   display: block;
   position: absolute;
-  top: 7px;
-  left: -26px;
-  width: 32px;
-  transform: rotate(-46deg);
-  border-top: 4px solid black;
-  border-top-left-radius: 2px;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+  width: 48px;
+  height: 44px;
+  background: linear-gradient(-45deg, white 0, white 32px, #1698d9 32px, #1698d9 36px, transparent 34px);
+}
+
+.card__main {
+  background-color: white;
+  border: 4px solid #1698d9;
+  min-height: 440px;
+  border-top: none;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  background-image: url('../img/cat.png');
+  background-repeat: no-repeat;
+  background-position: -29px 162px;
+  padding-left: 43px;
+  display: flex;
+  flex-direction: column;
+}
+
+.card__title {
+  font-size: 48px;
+  margin: 0;
+  font-weight: 700;
+}
+
+.card__fill {
+  margin-bottom: 15px;
+  font-size: 24px;
+}
+
+.card__wrap {
+  display: flex;
+  flex-direction: column;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.card__portions {
+  font-size: 14px;
+  line-height: 16px;
 }
