--- a/source/scss/components/card.scss
+++ b/source/scss/components/card.scss
@@ -9,7 +9,7 @@
   width: 273px;
   height: 40px;
   margin-left: auto;
-  border: 4px solid #1698d9;
+  border: 4px solid $default-card;
   background:white;
   border-bottom: none;
   border-left: none;
@@ -30,13 +30,23 @@
   left: 0px;
   z-index: 1;
   width: 48px;
-  height: 44px;
-  background: linear-gradient(-45deg, white 0, white 32px, #1698d9 32px, #1698d9 36px, transparent 34px);
+  height: 41px;
+  background: linear-gradient(-45deg, white 0, white 32px, $default-card 32px, $default-card 36px, transparent 34px);
+  &::before {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 6px;
+    height: 4px;
+    background: #1698d9;
+    right: 2px;
+    top: 0;
+  }
 }
 
 .card__main {
   background-color: white;
-  border: 4px solid #1698d9;
+  border: 4px solid $default-card;
   min-height: 440px;
   border-top: none;
   border-bottom-left-radius: 10px;
@@ -47,6 +57,8 @@
   padding-left: 43px;
   display: flex;
   flex-direction: column;
+  padding-bottom: 11px;
+  padding-right: 11px;
 }
 
 .card__title {
@@ -70,4 +82,26 @@
 .card__portions {
   font-size: 14px;
   line-height: 16px;
+}
+
+.card__weight-wrap {
+  margin-top: auto;
+  margin-left: auto;
+  border-radius: 50%;
+  background-color: $default-card;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  padding-top: 5px;
+  align-items: center;
+}
+
+.card__weight-num {
+  font-size: 42px;
+}
+
+.card__to-weight {
+  font-size: 21px;
+  margin-top: -10px;
 }
