--- a/source/scss/global/global.scss
+++ b/source/scss/global/global.scss
@@ -4,4 +4,6 @@
 body {
   background-image: url('../img/shadow.png');
   font-family: Exo, Arial, sans-serif;
+  padding-bottom: 50px;
+  padding-top: 50px;
 }
