--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,3 +1,5 @@
 @import 'global/global';
+@import 'global/variables';
+@import 'global/container';
 @import 'global/fonts';
 @import 'components/card';
