--- a/source/scss/global/global.scss
+++ b/source/scss/global/global.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
 }
 body {
+  min-width: 350px;
   background-image: url('../img/shadow.png');
   font-family: Exo, Arial, sans-serif;
   padding-bottom: 50px;
