--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -2,4 +2,6 @@
 @import 'global/variables';
 @import 'global/container';
 @import 'global/fonts';
+@import 'components/card-list';
 @import 'components/card';
+@import 'components/page-title';
