--- a/source/scss/components/card-list.scss
+++ b/source/scss/components/card-list.scss
@@ -1,9 +1,24 @@
 .card-list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-   
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+
+  @media (min-width: $tablet) {
+    flex-direction: row;
+    &__wrap {
+      width: 100%;
+    }
+  }
+
+  @media (min-width: $desktop) {
+    justify-content: space-around;
+    &__wrap {
+      width: auto;
+    }
+  }
 }
+
 .card-list__item {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
