--- a/source/scss/components/card.scss
+++ b/source/scss/components/card.scss
@@ -53,6 +53,7 @@
   position: relative;
   border-top-right-radius: 10px;
   z-index: 2;
+  transition: border .3s linear;
 }
 
 .card__desc {
@@ -65,12 +66,13 @@
 .card__triangle {
   display: block;
   position: absolute;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   color: $default-card;
   z-index: 1;
   width: 48px;
   height: 41px;
+  transition: background-color .3s;
   background: linear-gradient(-45deg, white 0, white 32px, $default-card 32px, $default-card 36px, transparent 34px);
   &::before {
     content: '';
