--- a/source/scss/global/variables.scss
+++ b/source/scss/global/variables.scss
@@ -3,6 +3,7 @@ $light-blue: #2ea8e6;
 $pink: #d91667;
 $light-pink: #e62e7a;
 $light-grey: #b3b3b3;
+$white: white;
 
 $default-card: $blue;
 $hover-card: $light-blue;
