--- a/source/scss/global/variables.scss
+++ b/source/scss/global/variables.scss
@@ -4,12 +4,14 @@ $pink: #d91667;
 $light-pink: #e62e7a;
 $light-grey: #b3b3b3;
 $white: white;
+$yellow: #ffff66;
 
 $default-card: $blue;
 $hover-card: $light-blue;
 $active-card: $pink;
 $active-card--hover: $light-pink;
 $disabled-card: $light-grey;
+$disabled-card--text: $yellow;
 
 // WIDTH
 $desktop: 1200px;
