add variables comment

--- a/source/scss/global/variables.scss
+++ b/source/scss/global/variables.scss
@@ -1,3 +1,4 @@
+// COLORS
 $blue: #1698d9;
 $light-blue: #2ea8e6;
 $pink: #d91667;
@@ -6,6 +7,7 @@ $light-grey: #b3b3b3;
 $white: white;
 $yellow: #ffff66;
 
+// CTATES COLOR
 $default-card: $blue;
 $hover-card: $light-blue;
 $active-card: $pink;
