--- a/source/scss/components/card.scss
+++ b/source/scss/components/card.scss
@@ -69,7 +69,6 @@
   position: relative;
   border-top-right-radius: 10px;
   z-index: 2;
-  transition: border .3s linear;
   position: relative;
   z-index: 1;
 }
@@ -90,17 +89,16 @@
   z-index: 1;
   width: 48px;
   height: 41px;
-  transition: background-color .3s;
   background: linear-gradient(-45deg, white 0, white 32px, $default-card 32px, $default-card 36px, transparent 34px);
 
   &::before {
     content: '';
     position: absolute;
     display: block;
-    width: 6px;
+    width: 7px;
     height: 4px;
     background-color: currentColor;
-    right: 2px;
+    right: 1px;
     top: 0;
   }
 }
@@ -148,6 +146,7 @@
 }
 
 .card__weight-wrap {
+  color: $white;
   margin-top: auto;
   margin-left: auto;
   border-radius: 50%;
